# gryag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  <async_generator object test_db at 0x7f3b3d0f1640>  <async_generator object test_db at 0x7f6a5bad8840>  <async_generator object test_db at 0x7f6a5bad9840>  <async_generator object test_db at 0x7f6a5bad9e40>  <async_generator object test_db at 0x7f6a5bada540>  <async_generator object test_db at 0x7f6a5bada740>  ADVANCED_FEATURES_IMPLEMENTATION_SUMMARY.md  ADVANCED_FEATURES_INTEGRATION.md  AGENTS.md  CHAT_ANALYSIS_INSIGHTS.md  COMPLETE_SESSION_SUMMARY.md  CONTINUOUS_LEARNING_INDEX.md  CONTRIBUTING.md  CPP_IMPLEMENTATION_SUMMARY.md  CPP_MIGRATION_ANALYSIS.md  CRITICAL_IMPROVEMENTS.md  DOCKER_BUILD_TROUBLESHOOTING.md  Dockerfile  HYBRID_EXTRACTION_IMPLEMENTATION.md  IMPLEMENTATION_INDEX.md  IMPLEMENTATION_STATUS_COMPARISON.md  IMPLEMENTATION_WORK_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MEDIA_CONTEXT_VERIFICATION.md  Makefile  NEXT_STEPS_PLAN_I5_6500.md  PHASE_2_COMPLETE.md  PHASE_2_SUMMARY.md  PHASE_2_TESTING.md  PHASE_3_IMPLEMENTATION_COMPLETE.md  PHASE_3_TESTING_STATUS.md  PHASE_3_VALIDATION_SUMMARY.md  PHASE_4_IMPLEMENTATION_COMPLETE.md  README.md  README_INTEGRATION.md  (+29 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  test.yml
.specstory/: .gitignore  .project.json
.specstory/history/: 2025-08-31_12-15Z-creating-a-telegram-bot-with-aiogram-in-python.md  2025-09-26_07-01Z-project-codebase-capabilities-overview.md  2025-09-26_08-12Z-project-overview-for-gemini-telegram-bot.md  2025-09-29_19-16Z-understanding-bot-persona-configuration-in-code.md  2025-09-30_15-39Z-creating-a-comprehensive-gitignore-file.md  2025-09-30_15-49Z-comprehensive-codebase-improvement-plan.md  2025-09-30_17-10Z-fixing-telegram-markdown-formatting-issues.md  2025-10-01_16-20Z-suggestions-for-chatbot-tool-integrations.md  2025-10-01_16-36Z-fixing-terminal-selection-errors.md  2025-10-01_17-05Z-improving-chatbot-context-through-user-profiling.md  2025-10-01_20-38Z-continuous-learning-and-proactive-response-for-chatbots.md  2025-10-01_21-10Z-phase-1-implementation-of-gryag-bot-learning-system.md  2025-10-01_22-25Z-overview-of-bot-persona-characteristics.md  (+75 more)
app/: config.py  constants.py  main.py  persona.py
app/core/: __init__.py  exceptions.py  (+2 more)
backend/: Dockerfile  go.mod  go.sum
ci_run_fails_logs/: 12_Post Checkout.txt  13_Complete job.txt  1_Set up job.txt  2_Checkout.txt  3_Set up Python.txt  4_Cache pip.txt  5_Install dependencies.txt  6_Run CI checks.txt  system.txt
config/: persona.txt
cpp/: CMakeLists.txt  DELIVERY_MANIFEST.md  Dockerfile  HANDLER_INTEGRATION_GUIDE.md  INTEGRATION_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  README.md
cpp/include/gryag/core/: application.hpp  logging.hpp  settings.hpp
cpp/include/gryag/handlers/: admin_handler.hpp  chat_admin_handler.hpp  chat_handler.hpp  handler_context.hpp  profile_handler.hpp  prompt_admin_handler.hpp
cpp/include/gryag/infrastructure/: redis.hpp  sqlite.hpp
cpp/include/gryag/repositories/: memory_repository.hpp
cpp/include/gryag/services/: context_store.hpp  triggers.hpp  user_profile_store.hpp
cpp/include/gryag/services/background/: donation_scheduler.hpp  episode_monitor.hpp  resource_monitor.hpp  retention_pruner.hpp
cpp/include/gryag/services/context/: episodic_memory_store.hpp  hybrid_search_engine.hpp  multi_level_context_manager.hpp  sqlite_hybrid_search_engine.hpp
cpp/include/gryag/services/gemini/: gemini_client.hpp
cpp/include/gryag/services/persona/: persona_loader.hpp
cpp/include/gryag/services/prompt/: system_prompt_manager.hpp
cpp/include/gryag/services/rate_limit/: feature_rate_limiter.hpp  rate_limiter.hpp
cpp/include/gryag/services/tools/: calculator_tool.hpp  currency_tool.hpp  default_tools.hpp  image_generation_tool.hpp  memory_tools.hpp  polls_tool.hpp  search_messages_tool.hpp  search_tool.hpp  tool.hpp  weather_tool.hpp
cpp/include/gryag/telegram/: client.hpp  types.hpp
cpp/src/: CMakeLists.txt  main.cpp
cpp/src/core/: application.cpp  logging.cpp  settings.cpp
cpp/src/handlers/: admin_handler.cpp  chat_admin_handler.cpp  chat_handler.cpp  profile_handler.cpp  prompt_admin_handler.cpp
cpp/src/infrastructure/: redis.cpp  sqlite.cpp
cpp/src/repositories/: memory_repository.cpp
cpp/src/services/: context_store.cpp  triggers.cpp  user_profile_store.cpp
cpp/src/services/background/: donation_scheduler.cpp  episode_monitor.cpp  resource_monitor.cpp  retention_pruner.cpp
cpp/src/services/context/: episodic_memory_store.cpp  multi_level_context_manager.cpp  sqlite_hybrid_search_engine.cpp
cpp/src/services/gemini/: gemini_client.cpp
cpp/src/services/persona/: persona_loader.cpp
cpp/src/services/prompt/: system_prompt_manager.cpp
cpp/src/services/rate_limit/: feature_rate_limiter.cpp  rate_limiter.cpp
cpp/src/services/tools/: calculator_tool.cpp  currency_tool.cpp  default_tools.cpp  image_generation_tool.cpp  memory_tools.cpp  polls_tool.cpp  search_messages_tool.cpp  search_tool.cpp  tool.cpp  weather_tool.cpp
cpp/src/telegram/: client.cpp
cpp/tests/: CMakeLists.txt
db/: init_db.py  schema.sql  schema_postgresql.sql
docs/: API_DOCUMENTATION.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY_2025_10_21.md  IMPROVEMENT-INDEX.md  README.md  admin-broadcast-usage.md  architecture.md  configuration.md  deployment.md  tools.md
frontend/: Dockerfile  main.py  md_to_tg.py  requirements.txt  test_md_to_tg.py
migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_message_search.down.sql  002_message_search.up.sql  003_reply_to_message_id.down.sql  003_reply_to_message_id.up.sql
personas/: README.md  english_assistant.yaml  ukrainian_gryag.txt  ukrainian_gryag.yaml
response_templates/: README.md  english.json  ukrainian.json
sandbox/: Dockerfile  entrypoint.sh
scripts/: README.md  add_checkers_table.py  add_checkers_table.sql  cleanup_logs.py  remove_throttle_tables.py  reset_database.py  verify_search_grounding_update.sh  verify_throttle_removal.sh
tests/: conftest.py
(+471 files in other folders)
